tests/paczka1/fuzzy1/37758914.err
Error in line 18: hjUROKF7A S225 67,3
Error in line 11: ZeiBTjP S580 69,6
Error in line 28: yJ0Ksc S225 78,3
Error in line 25: eoMhhEsLW S901 34,3
